# vk-framework

./: .gitignore  CMakeLists.txt  main.cpp
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/jae_b/vk_framework/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  EventLooper.cpp  EventLooper.h  vk_main.cpp
android/app/src/main/java/com/jae_b/vk_framework/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/jae_b/vk_framework/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
assets/shaders/: frag.glsl  shader.frag  shader.vert  vert.glsl
inc/: DrawSetup.cpp  DrawSetup.h  GpuRenderPass.cpp  GpuRenderPass.h  asset_utils.h  config.h.in  includes.h  includes.h.in  vk_drawsetup.cpp  vk_drawsetup.h  vk_framework.h  vk_framework_enums.h  vk_framework_structs.h  windowconfig.h  windowconfig.h.in
inc/Log/: Log.h
inc/utils/: draw_looper.h  spv_reflect_util.h  vk_command_X_utils.h  vk_descriptor_util.h  vk_draw_util.h  vk_draw_utils.h  vk_instance_and_device_utils.h  vk_layer_and_extension_utils.h  vk_render_X_utils.h  vk_shader_utils.h  vk_swapchain_utils.h  vk_sync_X_utils.h
inc/utils/platform/: Window.h
inc/utils/platform/Android/: WindowAndroid.h  vk_render_surface.h
inc/utils/platform/Linux/: WindowLinux.h  vk_render_surface.h
inc/utils/platform/Windows/: WindowWindows.h
inc/utils/resources/buffer/: vk_buffer_util.h
inc/utils/resources/image/: Texture2D.cpp  Texture2D.h  depth_util.h  texture_util.h  vk_image_util.h
inc/utils/sync/fences/: vk_fence_utils.h
inc/utils/sync/semaphores/: vk_semaphore_utils.h
src/: vk_framework.cpp
src/platform/Android/: Log.cpp  WindowAndroid.cpp  asset_utils.cpp  vk_render_surface.cpp
src/platform/Linux/: WindowLinux.cpp  vk_render_surface.cpp
src/platform/win32/: Log.cpp
src/utils/: spv_reflect_util.cpp  vk_command_X_utils.cpp  vk_descriptor_util.cpp  vk_draw_util.cpp  vk_instance_and_device_utils.cpp  vk_layer_and_extension_utils.cpp  vk_render_X_utils.cpp  vk_shader_utils.cpp  vk_swapchain_utils.cpp
src/utils/resources/buffer/: vk_buffer_util.cpp
src/utils/resources/image/: depth_util.cpp  texture_util.cpp  vk_image_util.cpp
src/utils/sync/fences/: vk_fence_utils.cpp
src/utils/sync/semaphores/: vk_semaphore_utils.cpp
vk_loader/: vk_functions.cpp  vk_loader.cpp
vk_loader/inc/: vk_functions.h  vk_functions_list.inl  vk_loader.h
